tests/samples/negative/types/bcast_bool_from_u8.ax
module bcast_bool_from_u8;

fn main() -> i32 {
    let value: bool = bitcast<bool>(((2) as u8));
    if value {
        return 1;
    }
    return 0;
}
